Timeline's layout has been fixed in order to make it possible to work in accordance on css files. Navigation pane visibility management become possible

--- a/public/css/less/custom-styles.less
+++ b/public/css/less/custom-styles.less
@@ -629,12 +629,26 @@ body {
 
             .vco-feature {
 
+                height: 400px;
                 position: relative;
-
 
                 .vco-slider {
 
                     box-shadow: none;
+
+                    .slider-container-mask {
+
+                        .slider-container {
+
+                            .slider-item-container {
+                                display: block;
+                                position: relative;
+
+                                height: 100%;
+                                vertical-align: initial;
+                            }
+                        }
+                    }
                 }
             }
 
